--- a/QuizComp.css
+++ b/QuizComp.css
@@ -43,9 +43,9 @@ body{
     left: 31%;
     top: 25%;
     /* change your image here */
-    background-image: url('guyde.jpg');
+    background-image: url('elon.jpg');
     /* do not change the below value */
-    background-size:507px 502px;
+    background-size:601px 597px;
     border-image-repeat: no-repeat;
 }
 
@@ -81,7 +81,8 @@ body{
     width: 80%; /* Could be more or less, depending on screen size */
     font-weight: 30px;
     font-size: 25px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 
