--- a/QuizComp.css
+++ b/QuizComp.css
@@ -43,7 +43,7 @@ body{
     left: 31%;
     top: 25%;
     /* change your image here */
-    background-image: url('timcook.jpeg');
+    background-image: url('elon.jpg');
     /* do not change the below value */
     background-size:601px 597px;
     border-image-repeat: no-repeat;
